--- a/config/MarioClub_us/config_dtk.yml
+++ b/config/MarioClub_us/config_dtk.yml
@@ -4,3 +4,7 @@ hash: db87a9ec1a34275efc45d965dcdcb1a9eb131885
 symbols: config/MarioClub_us/symbols.txt
 splits: config/MarioClub_us/splits.txt
 mw_comment_version: 8
+
+extract:
+- symbol: JUTResFONT_Ascfont_fix12
+  binary: JSystem/JUtility/FontData/Ascfont_fix12.bfn
