--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,10 @@ jobs:
         version: [MarioClub_us]
 
     steps:
-    # Checkout the repository (shallow clone)
+    # Checkout the repository
     - name: Checkout
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0
         submodules: recursive
 
     # Set Git config
@@ -33,17 +32,33 @@ jobs:
     # Build the project
     - name: Build
       run: |
-        python configure.py --version ${{ matrix.version }} \
+        python configure.py --map --version ${{ matrix.version }} \
             --binutils /binutils --compilers /compilers
-        ninja build/${{ matrix.version }}/progress.json
+        ninja all_source build/${{ matrix.version }}/progress.json \
+            build/${{ matrix.version }}/report.json
 
     # Upload progress if we're on the main branch
     - name: Upload progress
       if: github.ref == 'refs/heads/main'
       continue-on-error: true
       env:
+        PROGRESS_SLUG: mkdd
         PROGRESS_API_KEY: ${{ secrets.PROGRESS_API_KEY }}
       run: |
         python tools/upload_progress.py -b https://progress.decomp.club/ \
-          -p mkdd -v ${{ matrix.version }} \
+          -p $PROGRESS_SLUG -v ${{ matrix.version }} \
           build/${{ matrix.version }}/progress.json
+
+    # Upload map files
+    - name: Upload map
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.version }}_maps
+        path: build/${{ matrix.version }}/**/*.MAP
+
+    # Upload progress report
+    - name: Upload report
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.version }}_report
+        path: build/${{ matrix.version }}/report.json
